Update print statement from 'Hello' to 'Goodbye'

--- a/public/index.html
+++ b/public/index.html
@@ -722,7 +722,7 @@
         // LICENSE MANAGEMENT SYSTEM
         // ================================================
         const LICENSE_CONFIG = {
-            VALID_LICENSE_KEY: 'QT-PRO-2024-78910-RAKIB', // এখানে আপনার লাইসেন্স key দিন
+            VALID_LICENSE_KEY: 'QT-PRO-2024-78910', // এখানে আপনার লাইসেন্স key দিন
             TRIAL_DAYS: 7,
             API_ENDPOINT: '/api/validate'
         };
@@ -2213,3 +2213,4 @@
 </body>
 
 </html>
+
