--- a/public/index.html
+++ b/public/index.html
@@ -722,7 +722,7 @@
         // LICENSE MANAGEMENT SYSTEM - FIXED VERSION
         // ================================================
         const LICENSE_CONFIG = {
-            VALID_LICENSE_KEY: 'QT-PRO-2024-78910-ABCDE', // এখানে আপনার লাইসেন্স key দিন
+            VALID_LICENSE_KEY: 'QT-PRO-2024-78910', // এখানে আপনার লাইসেন্স key দিন
             API_ENDPOINT: '/api/validate'
         };
 
@@ -2195,5 +2195,6 @@
 </body>
 
 </html>
+
 
 
